--- a/templates/v_base.html
+++ b/templates/v_base.html
@@ -14,7 +14,7 @@
         <link rel="shortcut icon" href="{% static 'vendor/images/favicon.ico' %}">
 
         <!-- <link href="{% static 'styles/style.css' %}" rel="stylesheet" type="text/css" /> -->
-        <link href="{% static 'vendor/styles/MetroJs.Full/MetroJs.min.css' %}" rel="stylesheet" type="text/css" />
+        <!-- <link href="{% static 'vendor/styles/MetroJs.Full/MetroJs.min.css' %}" rel="stylesheet" type="text/css" /> -->
         <link href="https://fonts.googleapis.com/css?family=Arial:400,600" rel="stylesheet">
 
         <!-- Bootstrap Css -->
@@ -107,8 +107,8 @@
 
         <!-- Datatable init js -->
         <script src="{% static 'vendor/scripts/pages/datatables.init.js' %}"></script>
-        <!-- Peity chart-->
-        <script src="{% static 'vendor/libs/peity/jquery.peity.min.js"></script>
+        <!-- Peity chart
+        <script src="{% static 'vendor/libs/peity/jquery.peity.min.js"></script>-->
 
         <script src="{% static 'vendor/libs/dropify/js/dropify.min.js' %}"></script>
     </body>
